--- a/source/less/global.less
+++ b/source/less/global.less
@@ -14,6 +14,10 @@ input[type="radio"].visually-hidden {
   overflow: hidden;
 }
 
+input[type="number"]::-webkit-inner-spin-button {
+  display: none;
+}
+
 .page {
   box-sizing: border-box;
 }
