--- a/source/less/blocks/address.less
+++ b/source/less/blocks/address.less
@@ -2,12 +2,16 @@
   background-color: @basic-white;
 }
 
+.address--catalog {
+  background-color: @basic_grey;
+}
+
 .address__wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding-top: 30px;
-  padding-bottom: 19px;
+  padding-top: 28px;
+  padding-bottom: 25px;
 }
 
 .address__slogan {
@@ -28,6 +32,10 @@
 @media (min-width: @tablet-width) {
   .address {
     background-color: @basic-white;
+  }
+
+  .address--catalog {
+    background-color: @basic_grey;
   }
 
   .address--form {
