--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -1,3 +1,7 @@
+.product-wrapper {
+  margin-bottom: 21px;
+}
+
 @media (min-width: @tablet-width) {
   .product {
     width: 708px;
@@ -6,7 +10,11 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 60px;
-    grid-row-gap: 120px;
+    grid-row-gap: 41px;
+  }
+
+  .product-wrapper {
+    margin-bottom: 33px;
   }
 }
 
@@ -16,6 +24,6 @@
     width: 1220px;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-column-gap: 80px;
-    grid-row-gap: 144px;
+    grid-row-gap: 37px;
   }
 }
