--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -1,18 +1,23 @@
 .card {
-  border-bottom: 1px solid black;
-  margin-top: 25px;
+  border-bottom: 1px solid @border-catalog;
   padding-bottom: 24px;
+  padding-top: 20px;
 }
 
 .card__title {
   font-family: @oswald;
-  color: @special-grey;
   font-size: 16px;
   line-height: 20px;
   width: 76px;
   padding: 0;
   margin: 0;
-  margin-bottom: 18px;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+  font-weight: 400;
+}
+
+.card__link-title {
+  color: @special-grey;
 }
 
 .card__list {
@@ -24,7 +29,6 @@
   grid-template-columns: 1fr 1fr;
   margin: 0;
   padding: 0;
-  margin-bottom: 22px;
 }
 
 
@@ -48,14 +52,14 @@
 }
 
 .card__image--min {
-  margin-right: 30px;
-  margin-left: 36px;
+  margin-right: 35px;
+  margin-left: 33px;
   margin-top: 14px;
 }
 
 .card__image--max {
-  margin-right: 26px;
-  margin-left: 26px;
+  margin-right: 27px;
+  margin-left: 28px;
   margin-top: 11px;
 }
 
@@ -69,11 +73,13 @@
 @media (min-width: @tablet-width) {
   .card {
     border: none;
-    background-color: @basic_grey;
+    background-image: linear-gradient(@basic-white 18.6%, @background-grey 18.6%);
     width: 324px;
+    min-height: 509px;
     display: flex;
     flex-wrap: wrap;
     margin: 0;
+    padding-bottom: 0;
     flex-direction: column;
   }
 
@@ -81,34 +87,60 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0;
+  }
+
+  .card__image--min {
+    width: 130px;
+    height: 172px;
+    margin-top: 35px;
+    margin-bottom: 34px;
+  }
+
+  .card__image--max {
+    width: 168px;
+    height: 200px;
+    margin-bottom: 29px;
   }
 
   .card__title {
-    width: 120px;
+    width: 135px;
     text-align: center;
     margin: 0 auto;
+    font-size: 20px;
+    line-height: 24px;
+    margin-bottom: 19px;
   }
 
   .card__list {
-    width: 250px;
+    width: 248px;
+    font-size: 16px;
+    line-height: 16px;
+    grid-row-gap: 6px;
   }
 
   .card__definition {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid @toogle-border-grey;
+    padding-bottom: 9px;
   }
 
   .card__description {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid @toogle-border-grey;
   }
 
   .card__link--button {
-    width: 230px;
+    width: 228px;
+    padding-top: 9px;
+    padding-bottom: 10px;
+    align-self: flex-start;
+    margin-left: 17px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .card {
     width: 245px;
+    min-height: 517px;
   }
 
   .card__wrapper {
@@ -116,25 +148,35 @@
     padding: 0;
   }
 
+  .card__image--min {
+    margin-bottom: 40px;
+  }
+
+  .card__image--max {
+    margin-bottom: 37px;
+  }
+
   .card__title {
-    width: 120px;
+    width: 130px;
     text-align: center;
     margin: 0 auto;
+    margin-bottom: 20px;
   }
 
   .card__list {
-    width: 180px;
+    width: 170px;
   }
 
   .card__definition {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid @toogle-border-grey;
   }
 
   .card__description {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid @toogle-border-grey;
   }
 
   .card__link--button {
-    width: 160px;
+    width: 147px;
+    margin: 0 auto;
   }
 }
