--- a/source/less/blocks/catalog-additional-goods.less
+++ b/source/less/blocks/catalog-additional-goods.less
@@ -3,10 +3,12 @@
   color: @basic-black;
   margin: 0 auto;
   padding: 0;
+  font-weight: 400;
   font-size: 24px;
   line-height: 24px;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid @toogle-border-grey;
   background-color: @basic-white;
+  padding-bottom: 35px;
 }
 
 .catalog-additional-goods--line {
@@ -16,14 +18,18 @@
 .catalog-additional-goods--line::before {
   content: "";
   position: absolute;
-  width: 15%;
-  top: 15px;
+  width: 17%;
+  top: 14px;
   right: 0;
   height: 3px;
   background-color: @basic_green;
 }
 
 @media (min-width: @tablet-width) {
+  .catalog-additional-goods {
+    margin-bottom: 76px;
+  }
+
   .catalog-additional-goods__wraper-title {
     width: 708px;
     margin: 0 auto;
@@ -32,16 +38,21 @@
   .catalog-additional-goods-title {
     border-bottom: none;
     position: relative;
-    width: 250px;
+    width: 365px;
     padding: 0;
     margin: 0;
+    margin-bottom: 80px;
+    padding-left: 37px;
+    padding-right: 10px;
+    font-size: 36px;
+    line-height: 36px;
   }
 
   .catalog-additional-goods--line::before {
     content: "";
     position: absolute;
     width: 100%;
-    top: 15px;
+    top: 21px;
     right: 0;
     height: 3px;
     background-color: @basic_green;
@@ -60,13 +71,21 @@
   .catalog-additional-goods__wraper-title {
     width: 1220px;
     margin: 0 auto;
+    margin-bottom: 80px;
   }
 
   .catalog-additional-goods-title {
     border-bottom: none;
     position: relative;
-    width: 250px;
+    width: 340px;
     padding: 0;
     margin: 0;
+    margin-left: -40px;
+    padding-left: 40px;
+    padding-right: 32px;
+  }
+
+  .catalog-additional-goods {
+    margin-bottom: 16px;
   }
 }
