--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -1,13 +1,12 @@
 .present {
   width: 280px;
-  height: 289px;
+  min-height: 289px;
   margin: 0 auto;
-  padding: 0 20px;
   background-color: @basic_green;
   background-image: url("../img/catalog-mobile.png");
   background-repeat: no-repeat;
-  background-size: 280px 289px;
   background-position: center;
+  margin-bottom: 35px;
 }
 
 .present__text-pesent {
@@ -16,15 +15,57 @@
   color: @basic-white;
   padding: 0;
   margin: 0;
+  width: 161px;
+  text-align: center;
+  padding-top: 186px;
+  margin-left: 58px;
+  position: relative;
+
+  &::before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 78px;
+    height: 80px;
+    background-image: url("../img/icon_gift.png");
+    background-repeat: no-repeat;
+    top: 57px;
+    left: 44px;
+  }
 }
 
 @media (min-width: @tablet-width) {
   .present {
     width: 708px;
-    height: 200px;
-    padding: 0;
+    min-height: 139px;
+    margin: 0 auto;
+    padding-top: 61px;
+    background-color: @basic_green;
     background-image: url("../img/catalog-tablet.png");
     background-size: 708px 200px;
+    background-repeat: no-repeat;
+    background-position: top;
+    position: relative;
+  }
+
+  .present__text-pesent {
+    padding: 0;
+    text-align: left;
+    padding-top: 10px;
+    padding-left: 365px;
+    position: relative;
+
+    &::before {
+      content: "";
+      display: block;
+      position: absolute;
+      width: 78px;
+      height: 80px;
+      background-image: url("../img/icon_gift.png");
+      background-repeat: no-repeat;
+      top: -5px;
+      left: 21px;
+    }
   }
 }
 
@@ -38,5 +79,30 @@
     background-image: url("../img/catalog-mobile.png");
     background-repeat: no-repeat;
     background-size: 245px 289px;
+  }
+
+  .present__text-pesent {
+    font-size: 16px;
+    line-height: 20px;
+    color: @basic-white;
+    padding: 0;
+    margin: 0;
+    width: 161px;
+    text-align: center;
+    padding-top: 186px;
+    margin-left: 40px;
+    position: relative;
+
+    &::before {
+      content: "";
+      display: block;
+      position: absolute;
+      width: 78px;
+      height: 80px;
+      background-image: url("../img/icon_gift.png");
+      background-repeat: no-repeat;
+      top: 57px;
+      left: 48px;
+    }
   }
 }
