--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -14,6 +14,8 @@
 @button-hover: #5EAA2F;
 @button-hover-text: rgba(255,255,255,0.3);
 @input-border-grey: #E7E7E7;
+@border-catalog: #EBEBEB;
+@color-all-goods: #D3D3D3;
 
 @tablet-width: 768px;
 @desktop-width: 1440px;
