--- a/source/less/blocks/additional-goods-product.less
+++ b/source/less/blocks/additional-goods-product.less
@@ -29,11 +29,14 @@
 .additional-goods-product__text {
   line-height: 14px;
   margin: 0;
+  width: 120px;
 }
 
 .additional-goods-product__price {
   line-height: 14px;
   margin: 0;
+  width: 100px;
+  text-align: right;
 }
 
 .additional-goods-product__link {
@@ -48,6 +51,8 @@
     display: grid;
     grid-template-columns: 1fr auto;
     padding-top: 25px;
+    padding-left: 38px;
+    padding-right: 39px;
     padding-bottom: 27px;
     grid-template-areas:
       "title text"
@@ -63,11 +68,11 @@
     line-height: 20px;
     margin: 0;
     padding: 0;
+    width: 200px;
   }
 
   .additional-goods-product__link-title {
     grid-area: title;
-    margin-left: 37px;
   }
 
   .additional-goods-product__text-wrapper {
@@ -75,12 +80,16 @@
     padding: 0;
     padding-top: 7px;
     margin: 0;
-    margin-right: 39px;
     margin-bottom: 26px;
   }
 
+  .additional-goods-product__text {
+    width: 140px;
+    text-align: right;
+  }
+
   .additional-goods-product__price {
-    margin-left: 48px;
+    width: 91px;
   }
 
   .additional-goods-product__link {
@@ -100,6 +109,8 @@
     grid-template-columns: 1fr 1fr 245px;
     grid-template-areas: "title text bottom";
     padding-top: 14px;
+    padding-left: 0;
+    padding-right: 0;
     padding-bottom: 17px;
     grid-column-gap: 38px;
 
@@ -127,6 +138,7 @@
   .additional-goods-product__text {
     padding: 0;
     margin: 0;
+    text-align: left;
   }
 
   .additional-goods-product__price {
