--- a/source/less/blocks/additional-goods.less
+++ b/source/less/blocks/additional-goods.less
@@ -21,9 +21,10 @@
     border: none;
     border-top: 1px solid @toogle-border-grey;
     border-bottom: 1px solid @toogle-border-grey;
+    margin-bottom: 0;
   }
 
   .catalog-additional-goods__catalog-wrapper {
-    margin-bottom: 0;
+    margin-bottom: 86px;
   }
 }
