--- a/source/less/blocks/all-goods.less
+++ b/source/less/blocks/all-goods.less
@@ -43,7 +43,7 @@
   margin-bottom: 8px;
   text-transform: uppercase;
   color: @special-black;
-  margin-left: 39px;
+  text-align: center;
   font-weight: 400;
 }
 
@@ -51,7 +51,7 @@
   font-size: 12px;
   line-height: 16px;
   margin: 0;
-  margin-left: 30px;
+  text-align: center;
   margin-bottom: 21px;
 }
 
@@ -71,7 +71,7 @@
   .all-goods {
     border: 2px solid @basic_grey;
     width: 320px;
-    height: 424px;
+    height: auto;
     margin: 0;
     margin-top: 102px;
     padding: 0;
@@ -143,6 +143,7 @@
 @media (min-width: @desktop-width) {
   .all-goods {
     width: 241px;
+    height: auto;
     margin-top: 107px;
   }
 
