--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -1,12 +1,14 @@
 .present {
   width: 280px;
-  min-height: 289px;
+  min-height: 274px;
   margin: 0 auto;
   background-color: @basic_green;
   background-image: url("../img/catalog-mobile.png");
   background-repeat: no-repeat;
   background-position: center;
+  background-size: 280px 100%;
   margin-bottom: 35px;
+  padding-bottom: 15px;
 }
 
 .present__text-pesent {
@@ -29,7 +31,7 @@
     height: 80px;
     background-image: url("../img/icon_gift.png");
     background-repeat: no-repeat;
-    top: 57px;
+    top: 58px;
     left: 44px;
   }
 }
@@ -37,12 +39,13 @@
 @media (min-width: @tablet-width) {
   .present {
     width: 708px;
-    min-height: 139px;
+    min-height: 129px;
     margin: 0 auto;
     padding-top: 61px;
+    padding-bottom: 10px;
     background-color: @basic_green;
     background-image: url("../img/catalog-tablet.png");
-    background-size: 708px 200px;
+    background-size: 708px 100%;
     background-repeat: no-repeat;
     background-position: top;
     position: relative;
@@ -72,13 +75,13 @@
 @media (min-width: @desktop-width) {
   .present {
     width: 245px;
-    height: 289px;
+    min-height: 279px;
     padding: 0;
     margin: 0;
     background-color: @basic_green;
     background-image: url("../img/catalog-mobile.png");
     background-repeat: no-repeat;
-    background-size: 245px 289px;
+    background-size: 245px 100%;
   }
 
   .present__text-pesent {
