--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -48,7 +48,7 @@
 }
 
 
-.main-nav__toggle {
+.page-header__toggle {
   border: none;
   width: 18px;
   height: 18px;
@@ -113,7 +113,7 @@
     font-size: 18px;
   }
 
-  .main-nav__toggle {
+  .page-header__toggle {
     display: none;
   }
 }
@@ -159,7 +159,7 @@
     line-height: 30px;
   }
 
-  .main-nav__toggle {
+  .page-header__toggle {
     display: none;
   }
 }
