--- a/source/less/blocks/site-menu.less
+++ b/source/less/blocks/site-menu.less
@@ -23,7 +23,7 @@
     }
   }
 
-  .site-menu__item--active {
+  .site-menu__link--active {
     position: relative;
 
     &::after {
@@ -74,7 +74,7 @@
     color: @special-black;
   }
 
-  .site-menu__item--active {
+  .site-menu__link--active {
     position: relative;
 
     &::after {
@@ -89,7 +89,7 @@
     }
   }
 
-  .site-menu__item--active-green {
+  .site-menu__link--active-green {
     position: relative;
 
     &::after {
