--- a/source/less/blocks/address.less
+++ b/source/less/blocks/address.less
@@ -54,7 +54,7 @@
     width: 625px;
     margin: 0 auto;
     padding-top: 65px;
-    padding-bottom: 55px;
+    padding-bottom: 58px;
   }
 
   .address__slogan {
@@ -75,6 +75,10 @@
     padding: 0;
     margin: 0;
     text-align: right;
+  }
+
+  .address__span {
+    margin-top: 6px;
   }
 
   .address__сity {
