--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -59,7 +59,7 @@
 
   .example {
     padding-top: 15px;
-    padding-bottom: 70px;
+    padding-bottom: 69px;
     background-image: linear-gradient(@basic-white 56.1%, @background-grey 56.1%);
   }
 
@@ -79,6 +79,7 @@
   .example__text {
     width: 680px;
     margin: 0;
+    margin-bottom: 1px;
   }
 
   .example__expenses {
@@ -118,10 +119,6 @@
 
   .example__image {
     margin-bottom: 15px;
-  }
-
-  .example__image--invisible {
-    display: none;
   }
 }
 
