--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -12,6 +12,10 @@
     background-color: @button-hover;
   }
 
+  &:focus {
+    background-color: @button-hover;
+  }
+
   &:active {
     color: @button-hover-text;
   }
