--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -11,6 +11,12 @@
   padding-bottom: 16px;
 }
 
+.page-footer__map-wrapper {
+  width: 100%;
+  height: 362px;
+  position: relative;
+}
+
 .page-footer__map {
   width: 100%;
   height: 362px;
@@ -19,7 +25,10 @@
 .page-footer__iframe {
   position: absolute;
   left: 0;
-  bottom: 231px;
+  top: 0;
+  border: 0;
+  width: 100%;
+  height: 362px;
 }
 
 .page-footer__logo {
@@ -35,15 +44,15 @@
   height: 24px;
   text-align: center;
 
-  &:hover {
+  &:hover[href] {
     opacity: 80%;
   }
 
-  &:active {
+  &:active[href] {
     opacity: 60%;
   }
 
-  &:focus {
+  &:focus[href] {
     opacity: 60%;
   }
 }
@@ -57,25 +66,18 @@
   padding-bottom: 10px;
   font-size: 16px;
   color: @special-dark-grey;
+  outline: none;
 
   &:hover .page-footer__logo-academy {
-    stroke: @basic_green;
-  }
-
-  &:active .page-footer__logo-academy {
-    opacity: 0.6;
-  }
-
-  &:focus .page-footer__logo-academy {
-    opacity: 0.6;
+    fill: @basic_green;
   }
 
   &:active {
-    opacity: 0.6;
+    opacity: 0.3;
   }
 
-  &:focus {
-    opacity: 0.6;
+  &:focus .page-footer__logo-academy {
+    fill: @basic_green;
   }
 }
 
@@ -83,11 +85,18 @@
   position: absolute;
   right: 0;
   top: 3px;
+  fill: @stroke-fb;
 }
 
 @media (min-width: @tablet-width) {
   .page-footer__container {
     background-color: @basic_grey;
+  }
+
+  .page-footer__map-wrapper {
+    width: 100%;
+    height: 400px;
+    position: relative;
   }
 
   .page-footer__map {
@@ -98,7 +107,9 @@
   .page-footer__iframe {
     position: absolute;
     left: 0;
-    bottom: 182px;
+    top: 0;
+    width: 100%;
+    height: 400px;
   }
 
   .page-footer__wrapper {
@@ -190,6 +201,14 @@
   }
 
 
+  .page-footer__map-wrapper {
+    width: 100%;
+    height: 400px;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
   .page-footer__map {
     position: absolute;
     width: 100%;
@@ -200,7 +219,10 @@
 
   .page-footer__iframe {
     position: absolute;
-    height: 400px;
     z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 429px;
   }
 }
