--- a/source/less/blocks/program-type.less
+++ b/source/less/blocks/program-type.less
@@ -19,7 +19,7 @@
   text-transform: uppercase;
   margin: 0;
   text-align: center;
-  padding-top: 15px;
+  padding-top: 16px;
   padding-left: 66px;
   padding-bottom: 16px;
   margin-bottom: 14px;
@@ -58,7 +58,7 @@
 .program-type__text {
   margin: 0;
   padding-bottom: 23px;
-  margin-bottom: 19px;
+  margin-bottom: 18px;
   border-bottom: 1px solid @border-dark-grey;
 }
 
@@ -78,6 +78,7 @@
     width: 32px;
     height: 10px;
     background-image: url("../img/icon_arrow-mobile.svg");
+    background-repeat: no-repeat;
     right: -7px;
     top: 6px;
   }
@@ -85,14 +86,20 @@
   &:hover {
     &::before {
       background-image: url("../img/icon_arrow-hover-mobile.svg");
+      transition-duration: 0.4s;
+    }
+  }
+
+  &:focus {
+    outline: none;
+
+    &::before {
+      background-image: url("../img/icon_arrow-hover-mobile.svg");
+      transition-duration: 0.4s;
     }
   }
 
   &:active {
-    opacity: 0.3;
-  }
-
-  &:focus {
     opacity: 0.3;
   }
 }
@@ -113,7 +120,7 @@
     margin: 0 auto;
     background-color: @basic_grey;
     padding-top: 78px;
-    padding-bottom: 55px;
+    padding-bottom: 56px;
     padding-left: 18px;
     padding-right: 280px;
   }
@@ -142,7 +149,7 @@
     width: 377px;
     margin: 0;
     margin-left: 35px;
-    margin-bottom: 29px;
+    margin-bottom: 28px;
     border-bottom: none;
     color: @basic-black;
   }
@@ -171,7 +178,7 @@
   }
 
   .program-type--slimming {
-    margin-bottom: 28px;
+    margin-bottom: 29px;
     position: relative;
 
     &::before {
@@ -226,7 +233,7 @@
     padding: 0;
     padding-top: 38px;
     padding-bottom: 59px;
-    padding-left: 50px;
+    padding-left: 52px;
     padding-right: 50px;
   }
 
@@ -239,7 +246,7 @@
     text-transform: uppercase;
     margin: 0;
     padding: 0;
-    padding-left: 165px;
+    padding-left: 163px;
     padding-top: 40px;
     padding-bottom: 40px;
     margin-bottom: 34px;
@@ -268,7 +275,7 @@
   }
 
   .program-type__title--weight-gain {
-    padding-left: 165px;
+    padding-left: 160px;
     position: relative;
 
     &::before {
@@ -279,7 +286,7 @@
       height: 100px;
       background-image: url("../img/cat_back-index-1.svg");
       background-repeat: no-repeat;
-      left: -17px;
+      left: -20px;
       top: 10px;
     }
   }
@@ -298,7 +305,6 @@
     padding: 0;
     padding-right: 60px;
 
-
     &::before {
       content: "";
       display: block;
@@ -306,22 +312,8 @@
       width: 32px;
       height: 10px;
       background-image: url("../img/icon_arrow-mobile.svg");
-      right: -3px;
-      top: 8px;
-    }
-
-    &:hover {
-      &::before {
-        background-image: url("../img/icon_arrow-hover-mobile.svg");
-      }
-    }
-
-    &:active {
-      opacity: 0.3;
-    }
-
-    &:focus {
-      opacity: 0.3;
+      top: 10px;
+      right: 0;
     }
   }
 
