--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -20,7 +20,7 @@
     z-index: -1;
     width: 100%;
     height: 62%;
-    background-color: green;
+    background-color: @basic_green;
   }
 }
 
@@ -64,6 +64,7 @@
   line-height: 18px;
   padding-top: 11px;
   padding-bottom: 11px;
+  outline: none;
 }
 
 @media (min-width: @tablet-width) {
