--- a/source/less/blocks/social-list.less
+++ b/source/less/blocks/social-list.less
@@ -7,10 +7,18 @@
   padding-top: 22px;
   padding-bottom: 6px;
   padding-left: 73px;
-  padding-right: 73px;
+  padding-right: 40px;
   margin-bottom: 20px;
   border-top: 1px solid @border-dark-grey;
   border-bottom: 1px solid @border-dark-grey;
+}
+
+.social-list__social-link {
+  outline: none;
+
+  &:focus .social-list__icon {
+    stroke: @basic_green;
+  }
 }
 
 .social-list__icon {
@@ -19,11 +27,7 @@
   }
 
   &:active {
-    opacity: 0.6;
-  }
-
-  &:focus {
-    opacity: 0.6;
+    opacity: 0.3;
   }
 }
 
@@ -32,8 +36,8 @@
 }
 
 .social-list__social-item {
-  margin-bottom: 10px;
   margin-right: 37px;
+  margin-bottom: 10px;
 
   &:last-child {
     margin-right: 0;
