--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -2,14 +2,14 @@
   color: @basic-white;
   font-family: @oswald;
   background-image: url("../img/index-cat-mobile.png");
-  background-size: 100% 302px;
+  background-size: 100% 63%;
   background-repeat: no-repeat;
   margin-bottom: 22px;
   position: relative;
 
   @media (min-resolution: 2dppx) {
     background-image: url("../img/index-cat-mobile-@2x.png");
-    background-size: 100% 302px;
+    background-size: 100% 63%;
     background-repeat: no-repeat;
   }
 
