--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -29,6 +29,7 @@
   border: 0;
   width: 100%;
   height: 362px;
+  z-index: 1;
 }
 
 .page-footer__logo {
@@ -110,13 +111,14 @@
     top: 0;
     width: 100%;
     height: 400px;
+    z-index: 1;
   }
 
   .page-footer__wrapper {
     width: 708px;
     padding-left: 30px;
     padding-right: 30px;
-    padding-top: 50px;
+    padding-top: 48px;
     padding-bottom: 50px;
     margin: 0 auto;
     display: flex;
