--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -16,18 +16,17 @@
 .page-header__wrapper {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   padding-bottom: 14px;
   margin-top: 12px;
   border-bottom: 1px solid @border-grey;
-  padding-left: 20px;
-  padding-right: 20px;
 }
 
 .page-header__logo {
   display: block;
   width: 190px;
   height: 39px;
+  margin-right: 70px;
 }
 
 .page-header__logo-image {
@@ -59,6 +58,8 @@
 }
 
 .page-header__toggle--opened {
+  position: relative;
+
   &::before,
   &::after {
     content: "";
@@ -66,8 +67,8 @@
     display: block;
     width: 24px;
     height: 2px;
-    right: 20px;
-    top: 31px;
+    right: 0;
+    top: 7px;
     background-color: @basic-black;
   }
 
@@ -147,7 +148,7 @@
   .page-header {
     display: grid;
     grid-template-columns: min-content 1fr;
-    grid-column-gap: 540px;
+    grid-column-gap: 470px;
     padding: 0 110px;
     margin-top: 50px;
     width: 1220px;
