--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -17,6 +17,8 @@
 @border-catalog: #EBEBEB;
 @color-all-goods: #D3D3D3;
 @stroke-fb: #666666;
+@input-invalid: #FF8282;
+@checkbox-hover: #BABABA;
 
 @tablet-width: 768px;
 @desktop-width: 1440px;
