--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -38,6 +38,16 @@
   height: 24px;
   margin: 0 auto;
   margin-bottom: 29px;
+  outline: none;
+
+  &:hover[href],
+  &:focus[href] {
+    opacity: 80%;
+  }
+
+  &:active[href] {
+    opacity: 60%;
+  }
 }
 
 .page-footer__logo-image {
@@ -108,7 +118,7 @@
   .page-footer__iframe {
     position: absolute;
     left: 0;
-    top: 0;
+    top: -2px;
     width: 100%;
     height: 400px;
     z-index: 1;
@@ -137,8 +147,6 @@
   }
 
   .page-footer__logo-image {
-    padding-top: 0;
-    padding-bottom: 0;
     margin: 0 auto;
     width: 128px;
     height: 24px;
@@ -162,6 +170,10 @@
 @media (min-width: @desktop-width) {
   .page-footer {
     position: relative;
+  }
+
+  .page-footer__logo {
+    margin: 0;
   }
 
   .page-footer__wrapper {
