--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -27,6 +27,16 @@
   width: 190px;
   height: 39px;
   margin-right: 70px;
+  outline: none;
+
+  &:hover[href],
+  &:focus[href] {
+    opacity: 80%;
+  }
+
+  &:active[href] {
+    opacity: 60%;
+  }
 }
 
 .page-header__logo-image {
@@ -156,7 +166,7 @@
   }
 
   .page-header--form {
-    margin-bottom: 78px;
+    margin-bottom: 74px;
   }
 
 
