--- a/source/less/blocks/toggle-controls.less
+++ b/source/less/blocks/toggle-controls.less
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
+  margin-left: 44px;
 }
 
 .toggle-controls__scale {
@@ -12,8 +12,8 @@
   border-radius: 6px;
   background-color: @basic-white;
   position: relative;
-  margin-left: 12px;
-  margin-right: 10px;
+  margin-left: 18px;
+  margin-right: 17px;
 }
 
 .toggle-controls__bar {
@@ -24,8 +24,8 @@
   border: none;
   background-color: @basic_green;
   position: absolute;
-  top: 4px;
-  left: 7px;
+  top: 3px;
+  left: 5px;
 }
 
 .toggle-controls__it-was-after {
@@ -37,15 +37,16 @@
   font-size: 16px;
   line-height: 20px;
   cursor: pointer;
+  padding: 0;
 }
 
 @media (min-width: @tablet-width) {
   .toggle-controls {
-    align-items: center;
     display: grid;
     margin: 0;
     padding: 0;
     grid-template-columns: min-content min-content min-content;
+    margin-left: 67px;
   }
 
   .toggle-controls__scale {
@@ -56,7 +57,7 @@
     background-color: @toogle-border-grey;
     position: relative;
     margin-left: 26px;
-    margin-right: 19px;
+    margin-right: 20px;
   }
 
   .toggle-controls__bar {
