--- a/source/less/global.less
+++ b/source/less/global.less
@@ -14,9 +14,9 @@ input[type="radio"].visually-hidden {
   overflow: hidden;
 }
 
-input[type="number"]::-webkit-inner-spin-button {
+/*input[type="number"]::-webkit-inner-spin-button {
   display: none;
-}
+}*/
 
 .page {
   box-sizing: border-box;
