--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -90,9 +90,10 @@
 @media (min-width: @desktop-width) {
   .present {
     width: 245px;
-    min-height: 279px;
+    min-height: 269px;
     padding: 0;
     margin: 0;
+    padding-bottom: 15px;
     background-color: @basic_green;
     background-image: url("../img/gift-photo-desktop@2x.png");
     background-repeat: no-repeat;
