--- a/source/less/blocks/all-goods.less
+++ b/source/less/blocks/all-goods.less
@@ -75,6 +75,7 @@
     margin: 0;
     margin-top: 102px;
     padding: 0;
+    padding-bottom: 20px;
   }
 
   .all-goods-wrapper {
@@ -82,6 +83,7 @@
     padding-top: 160px;
     margin: 0;
     position: relative;
+    width: 324px;
 
     &::before {
       content: "";
@@ -110,7 +112,7 @@
   .all-goods__product {
     width: 140px;
     text-align: center;
-    margin-left: 90px;
+    margin: 0 auto;
     font-size: 20px;
     line-height: 22px;
     margin-bottom: 25px;
@@ -122,7 +124,7 @@
     width: 170px;
     font-size: 16px;
     line-height: 18px;
-    margin-left: 75px;
+    margin: 0 auto;
     margin-bottom: 85px;
   }
 
@@ -150,6 +152,7 @@
 
   .all-goods-wrapper {
     padding: 0;
+    width: 241px;
     padding-top: 158px;
     margin: 0;
     position: relative;
@@ -181,7 +184,7 @@
   .all-goods__product {
     width: 140px;
     text-align: center;
-    margin-left: 52px;
+    margin: 0 auto;
     font-size: 20px;
     line-height: 22px;
     margin-bottom: 25px;
@@ -193,7 +196,7 @@
     width: 170px;
     font-size: 16px;
     line-height: 18px;
-    margin-left: 35px;
+    margin: 0 auto;
     margin-bottom: 86px;
   }
 
