--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -39,6 +39,11 @@
   height: 232px;
 }
 
+.example__image-after {
+  margin: 0 auto;
+  height: 232px;
+}
+
 .example__image {
   margin-bottom: 34px;
 }
@@ -59,8 +64,8 @@
 
   .example {
     padding-top: 15px;
-    padding-bottom: 69px;
-    background-image: linear-gradient(@basic-white 56.2%, @background-grey 56.2%);
+    padding-bottom: 67px;
+    background-image: linear-gradient(@basic-white 56.1%, @background-grey 56.1%);
   }
 
   .example__container {
@@ -196,6 +201,12 @@
     width: 677px;
     height: 520px;
     margin-left: 32px;
+  }
+
+  .example__image-after {
+    width: 542px;
+    height: 520px;
+    margin-left: 50px;
   }
 
   .example__image {
