--- a/source/less/blocks/toggle-controls.less
+++ b/source/less/blocks/toggle-controls.less
@@ -16,7 +16,7 @@
   margin-right: 17px;
 }
 
-.toggle-controls__bar {
+.toggle-controls__bar--before {
   display: block;
   width: 35px;
   height: 6px;
@@ -26,6 +26,18 @@
   position: absolute;
   top: 3px;
   left: 5px;
+}
+
+.toggle-controls__bar--after {
+  display: block;
+  width: 35px;
+  height: 6px;
+  border-radius: 6px;
+  border: none;
+  background-color: @basic_green;
+  position: absolute;
+  top: 3px;
+  right: 5px;
 }
 
 .toggle-controls__it-was-after {
