--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -13,12 +13,16 @@
 @toogle-border-grey: #CDCDCD;
 @button-hover: #5EAA2F;
 @button-hover-text: rgba(255,255,255,0.3);
+@button-hover-text-catalog: rgba(68,68,68,0.3);
 @input-border-grey: #E7E7E7;
 @border-catalog: #EBEBEB;
 @color-all-goods: #D3D3D3;
 @stroke-fb: #666666;
 @input-invalid: #FF8282;
 @checkbox-hover: #BABABA;
+@toogle-shadow: rgba(0, 0, 0, 0.16);
+@toogle-shadow-hover: rgba(0, 0, 0, 0.19);
+@toogle-shadow-active: rgba(0, 0, 0, 0.2);
 
 @tablet-width: 768px;
 @desktop-width: 1440px;
