--- a/source/less/blocks/all-goods.less
+++ b/source/less/blocks/all-goods.less
@@ -65,6 +65,19 @@
   padding-right: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
+  outline: none;
+
+  &:hover {
+    background-color: @border-catalog;
+  }
+
+  &:focus {
+    background-color: @border-catalog;
+  }
+
+  &:active {
+    color: @button-hover-text-catalog;
+  }
 }
 
 @media (min-width: @tablet-width) {
