--- a/source/less/blocks/toggle-controls.less
+++ b/source/less/blocks/toggle-controls.less
@@ -78,6 +78,7 @@
     border: 1px solid @toogle-border-grey;
     box-shadow: 0 1px 3px @toogle-shadow;
     outline: none;
+    cursor: pointer;
 
     &:hover {
       box-shadow: 0 2px 4px @toogle-shadow-hover;
@@ -106,12 +107,12 @@
   }
 
   .toggle-controls__bar--after {
-    right: 10px;
+    right: 0px;
     top: -16px;
   }
 
   .toggle-controls__bar--before {
-    left: 10px;
+    left: 0px;
     top: -16px;
   }
 
