--- a/source/less/blocks/toggle-controls.less
+++ b/source/less/blocks/toggle-controls.less
@@ -107,12 +107,12 @@
   }
 
   .toggle-controls__bar--after {
-    right: 0px;
+    right: 0;
     top: -16px;
   }
 
   .toggle-controls__bar--before {
-    left: 0px;
+    left: 0;
     top: -16px;
   }
 
